<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context=".mostrarDatos">

            <ImageView
                android:id="@+id/icono_foto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icono" />

            <TextView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/esquina_redondeada"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_title_data"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="210dp"/>

            <TextView
                android:id="@+id/textView_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="260dp" />

            <TextView
                android:id="@+id/textView_especialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="290dp"/>

            <TextView
                android:id="@+id/textView_nacionalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="320dp"/>

            <TextView
                android:id="@+id/textView_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="350dp"/>

            <TextView
                android:id="@+id/informacionDeContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/esquina_redondeada"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_title_information"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="380dp"/>

            <TextView
                android:id="@+id/textView_numero_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:gravity="center"
                android:textColorHint="#664023"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="410dp" />

            <TextView
                android:id="@+id/textView_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:gravity="center"
                android:textColorHint="#664023"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="440dp" />

            <TextView
                android:id="@+id/informacionAdicional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/esquina_redondeada"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_title_additional_information"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="470dp"/>

            <TextView
                android:id="@+id/textView_objetivo_profecional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:gravity="center"
                android:textColorHint="#664023"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="500dp"/>

            <TextView
                android:id="@+id/textView_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:gravity="center"
                android:textColorHint="#664023"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="530dp"/>

            <TextView
                android:id="@+id/experiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/esquina_redondeada"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_title_experience"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="560dp"/>

            <TextView
                android:id="@+id/radioBtn_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="620dp"/>

            <TextView
                android:id="@+id/radioBtn_excel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="650dp"/>
            <TextView
                android:id="@+id/radioBtn_power_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="680dp"/>
            <TextView
                android:id="@+id/radioBtn_programacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="710dp"/>
            <TextView
                android:id="@+id/radioBtn_bases_de_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="740dp"/>

            <TextView
                android:id="@+id/aptitudes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/esquina_redondeada"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_title_ability"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="770dp"/>

            <TextView
                android:id="@+id/radioBtn_trabajo_equipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="830dp" />
            <TextView
                android:id="@+id/radioBtn_trabajo_presion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="860dp"/>
            <TextView
                android:id="@+id/radioBtn_actitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="890dp"/>
            <TextView
                android:id="@+id/radioBtn_compañerismo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="920dp"/>
            <TextView
                android:id="@+id/radioBtn_analizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="950dp" />

            <TextView
                android:id="@+id/antecedentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/esquina_redondeada"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_title_employment_history"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="980dp"/>

            <TextView
                android:id="@+id/textView_certificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1010dp"/>

            <TextView
                android:id="@+id/textView_escuela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1040dp"/>

            <TextView
                android:id="@+id/textView_ultimo_trabajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1070dp"/>

            <TextView
                android:id="@+id/textView_experiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="number"
                android:textColorHint="#664023"
                android:gravity="center"
                android:textColor="#472D2D"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1100dp"/>

        </FrameLayout>
    </ScrollView>
</layout>